--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@mercuryworkshop/epoxy-transport": "^2.1.25",
 		"@titaniumnetwork-dev/ultraviolet": "^3.2.10",
 		"fastify": "^5.0.0",
+		"firebase": "^11.8.1",
 		"pnpm": "^10.11.0",
 		"ultraviolet-static": "link:Ultraviolet-Static",
 		"wisp-server-node": "^1.1.7",
